# scrapy-selenium

./: setup.cfg  setup.py
scrapy_selenium/: middlewares.py
tests/: test_cases.py
