[metadata]
name = scrapy-selenium
version = 0.0.8
url = https://github.com/loser1046/scrapy-selenium.git
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium:4.x
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
